fix scrollbar overflow issue

--- a/source/_docs/patterns/01-atoms/background-color/_background-color.scss
+++ b/source/_docs/patterns/01-atoms/background-color/_background-color.scss
@@ -83,7 +83,7 @@ in 2025. They have been combined with their nearest blue color instead.
     right: calc(-1 * var(--space--md));
     left: calc(-1 * var(--space--md));
     display: block;
-    width: calc(100vw - 12px);
+    width: 100cqw;
     height: 100%;
     content: "";
     background-size: cover;
