--- a/source/_docs/patterns/02-molecules/search/search.scss
+++ b/source/_docs/patterns/02-molecules/search/search.scss
@@ -10,7 +10,7 @@ Molecule: Search
   top: 0;
   left: 0;
   display: none;
-  width: 100vw;
+  width: 100cqw;
   padding: var(--space--lg);
   padding-top: var(--logo-size);
   @media(min-width: $medium) {
@@ -76,7 +76,10 @@ Molecule: Search
   margin-right: 0;
   border-radius: 50%;
   box-shadow: none;
-  font-size: var(--font-size--2xs);
+  font-size: var(--font-size--xs);
+  @media(min-width: $medium) {
+    font-size: var(--font-size--2xs);
+  }
   svg {
     width: 2.25rem;
     height: 2.25rem;
