--- a/source/_docs/patterns/04-templates/layouts/threecol/_threecol.scss
+++ b/source/_docs/patterns/04-templates/layouts/threecol/_threecol.scss
@@ -61,7 +61,7 @@ Templates: Layouts - Three column
 .layout--threecol--page-width {
   display: flex;
   flex-wrap: wrap;
-  max-width: 100vw;
+  max-width: 100cqw;
   margin-right: calc(-1 * var(--space--sm));
   margin-left: calc(-1 * var(--space--sm));
   @media (min-width: $large) {
